--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
   build:
     commands:
       - webpack -p
-      - aws s3 sync ./dist s3://$S3_PREFIX-login.rodcocr.com --acl public-read --cache-control max-age=60
+      - aws s3 sync ./dist s3://learnbyplay.3vot.com --acl public-read --cache-control max-age=60
 artifacts:
   type: zip
   files:
